crates/activate/src/snapshots/activate__test__partition_splits.snap
---
source: crates/activate/src/lib.rs
expression: "json!([\"splits\", (lhs, rhs), \"partition_changes\", partition_changes])"
---
[
  "splits",
  [
    {
      "append_bound": 112233,
      "flags": 8675,
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/field/a_bool",
            "value": "%_true"
          },
          {
            "name": "estuary.dev/field/a_str",
            "value": "a-val"
          },
          {
            "name": "estuary.dev/key-begin",
            "value": "10000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "27ffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 111,
      "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=10000000",
      "replication": 42
    },
    {
      "append_bound": 0,
      "flags": 8675,
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/field/a_bool",
            "value": "%_true"
          },
          {
            "name": "estuary.dev/field/a_str",
            "value": "a-val"
          },
          {
            "name": "estuary.dev/key-begin",
            "value": "28000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "3fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 0,
      "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=28000000",
      "replication": 42
    }
  ],
  "partition_changes",
  [
    {
      "Journal": {
        "expectModRevision": "111",
        "upsert": {
          "appendBound": "112233",
          "flags": 8675,
          "fragment": {
            "compressionCodec": "GZIP",
            "flushInterval": "900s",
            "length": "536870912",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/collection",
                "value": "example/collection"
              },
              {
                "name": "estuary.dev/field/a_bool",
                "value": "%_true"
              },
              {
                "name": "estuary.dev/field/a_str",
                "value": "a-val"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "10000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "27ffffff"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=10000000",
          "replication": 42
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "flags": 8675,
          "fragment": {
            "compressionCodec": "GZIP",
            "flushInterval": "900s",
            "length": "536870912",
            "pathPostfixTemplate": "utc_date={{.Spool.FirstAppendTime.Format \"2006-01-02\"}}/utc_hour={{.Spool.FirstAppendTime.Format \"15\"}}",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-ndjson"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/collection",
                "value": "example/collection"
              },
              {
                "name": "estuary.dev/field/a_bool",
                "value": "%_true"
              },
              {
                "name": "estuary.dev/field/a_str",
                "value": "a-val"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "28000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "3fffffff"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "example/collection/2020202020202020/a_bool=%_true/a_str=a-val/pivot=28000000",
          "replication": 42
        }
      }
    }
  ]
]
